--- a/src/core/Scraper.Core/Scraper.Core.csproj
+++ b/src/core/Scraper.Core/Scraper.Core.csproj
@@ -8,4 +8,8 @@
     <PackageReference Include="NodaTime" Version="2.4.7" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="UseCases\" />
+  </ItemGroup>
+
 </Project>
