--- a/test/TvMazeShowInformation.Adapter.Tests/TvMazeShowInformation.Adapter.Tests.csproj
+++ b/test/TvMazeShowInformation.Adapter.Tests/TvMazeShowInformation.Adapter.Tests.csproj
@@ -7,13 +7,20 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentAssertions" Version="5.9.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.3.0" />
+    <PackageReference Include="Moq" Version="4.13.0" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1">
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="coverlet.collector" Version="1.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\Adapters\TvMazeShowInformation.Adapter\TvMazeShowInformation.Adapter.csproj" />
+    <ProjectReference Include="..\Scraper.Test.Utils\Scraper.Test.Utils.csproj" />
   </ItemGroup>
 
 </Project>
