--- a/src/Adapters/TvMazeShowInformation.Adapter/TvMazeShowInformation.Adapter.csproj
+++ b/src/Adapters/TvMazeShowInformation.Adapter/TvMazeShowInformation.Adapter.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -7,7 +7,6 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Http" Version="2.2.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
-    <PackageReference Include="SimpleInjector" Version="4.7.1" />
   </ItemGroup>
 
   <ItemGroup>
